# dvquy13.github.io

./: .gitignore  .nojekyll  ARCHITECTURE.html  ARCHITECTURE.md  CLAUDE.html  CLAUDE.md  CNAME  Makefile  README.md  _publish.yml  _quarto.yml  _variables.yml  about.html  about.qmd  config.yml  custom.scss  dashboard.html  giscus-theme.css  index.html  index.qmd  index.xml  listings.json  metrics.jsonl  projects.html  projects.qmd  pyproject.toml  schema-markup.lua  search.json  sitemap.xml  styles.css  subscribe.html  subscribe.qmd  unsubscribe.html  unsubscribe.qmd
.claude/agents/: dvq.md  my-voice.md  paul-graham.md  tim-urban.md
.claude/commands/: review-writing.md
.claude/plans/: newsletter.md
.claude/rules/: custom-scss.md
.cursor/rules/: writing-style-guide.mdc
.github/workflows/: fetch-metrics.yml  publish.yml
analytics/: alerts.yaml
analytics/configs/: alerts.yaml  ga4_total_users.json  gsc_clicks_28d.json  gsc_impressions_28d.json
analytics/fixtures/: ga4_total_users.txt  gsc_impressions_28d.txt
analytics/scripts/: display-dashboard.py  fetch-ga4-top-sources.py  fetch-giscus-reactions.py  fetch-newsletter-subscribers.py  fetch-posts-published.py  generate-dashboard-html.py  push-and-notify.py  (+1 more)
archetypes/: post.md
content/: search.md
docs/: CLAUDE.html  about.html  index.html  index.xml  listings.json  projects.html  robots.txt  search.json  sitemap.xml  styles.css
notes/: ARCHITECTURE.md  UTM_CONVENTION.md
posts/: _metadata.yml
projects/: _metadata.yml
scripts/: check-quarto-version.sh  postprocess-feed.sh  validate-rss.sh
(+191 files in other folders)
