[tool.poetry]
name = "dvquy13-github-io"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"
packages = [{include = "dvquy13"}]

[tool.poetry.dependencies]
python = "3.11.9"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
